# tennis-lesson

./: .gitignore  AGENTS.md  pmd.md
_workspace/: 01_architect_api-contracts.md  01_architect_db-schema.sql  01_architect_system-design.md  02_backend_endpoints.md  03_frontend_pages.md  04_qa_checklist.md  04_qa_report.md  05_backend_lesson_type.md  05_frontend_lesson_type.md  05_lesson_type_migration.sql  06_backend_progress.md  06_progress_migration.sql  07_architect_court-api-contracts.md  07_architect_court-tactics-design.md  07_architect_court-tactics-schema.sql  07_backend_court_done.md  07_frontend_court_done.md  07_qa_court_report.md  08_backend_hallucination.md  08_deployment_hallucination.md  09_planning_quality_and_features.md  10_planning_pipeline_profiles.md  11_direction_overview.md  12_monetization_roadmap.md  13_planning_value_beyond_stt.md  (+6 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  database.py
backend/app/models/: __init__.py  lesson.py  report.py
backend/app/routers/: lessons.py  public.py
backend/app/services/: __init__.py  court_service.py  gemini_service.py  stt_filters.py  stt_providers.py  stt_service.py  verification.py  youtube_service.py  yt_dlp_helpers.py
backend/docker/: start.sh
backend/scripts/: eval_golden.py  extract_funnel_stats.py
backend/tests/: test_stt_filters.py  test_verification.py
backend/tests/golden/: 4mr0tviu9sw.json  5pugx_oyi5s.json  README.md  aya3iilw2b0.json  wh2b6vyr_ys.json
frontend/: README.md  (+5 more)
(+45 files in other folders)
