[project]
name = "tennis-lesson-backend"
version = "0.1.0"
description = "오늘의 테니스 — Phase 1 MVP FastAPI 백엔드"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.4.0",
    "google-generativeai>=0.5.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.3.10",
    "bgutil-ytdlp-pot-provider>=1.3.0",
    "openai-whisper>=20231117",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.models", "app.routers", "app.services"]
